Add dataset and model files

--- a/rag_recipes.ipynb
+++ b/rag_recipes.ipynb
@@ -1217,7 +1217,7 @@
       "source": [
         "# Embedding\n",
         "model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
-        "model.save(\"./models/all-MiniLM-L6-v2\")\n",
+        "model.save(\"model\")\n",
         "corpus = df[\"text\"].tolist()\n",
         "embeddings = model.encode(corpus, convert_to_numpy=True, show_progress_bar=True)"
       ]
