--- a/rag_recipes.ipynb
+++ b/rag_recipes.ipynb
@@ -1292,7 +1292,8 @@
       "source": [
         "faiss.write_index(index, \"recipe_faiss.index\")\n",
         "with open(\"recipe_texts.pkl\", \"wb\") as f:\n",
-        "    pickle.dump(corpus, f)"
+        "    pickle.dump(corpus, f)\n",
+        "    "
       ]
     }
   ],
